--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMP002 Assignment</title>
+
+    <script src="script.js"></script>
 </head>
 <body>
 
@@ -15,5 +17,6 @@
         document.getElementById("test").innerHTML = "grrrr rawrr woof!";
     </script>
     
+
 </body>
 </html>
