--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         document.getElementById("test").innerHTML = "grrrr rawrr woof!";
     </script>
     
+    <button type="button"
+    onclick="document.getElementById('demo').innerHTML = Date()">
+    Click here!!!</button>
+
+    <p id="demo"></p>
 
 </body>
 </html>
